--- a/Tab/www/index.html
+++ b/Tab/www/index.html
@@ -28,11 +28,13 @@
     <script src="lib/ionic/js/ionic.bundle.js" ></script>
 
     <!-- cordova script (this will be a 404 during development) -->
-
+      <script src="js/ng-cordova.js"></script>
+      <script src="cordova.js"></script>
 
     <!-- your app's js -->
       <script src="js/angular.js"></script>
       <script src="js/angular-route.js"></script>
+
       <script src="js/app.js"></script>
       <script src="js/controllers.js"></script>
 
